# limesurvey-etl

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  Makefile  Pipfile  README.md  README_PROJECT.md  docker-compose.yaml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: checkresources.yml
airflow/: Dockerfile  README.md  docker-compose.yaml  requirements.txt
airflow/dags/: cfe_limesurvey_etl.py  cfe_limesurvey_meta_tables.py  cfe_limesurvey_responses_survey_977429.py  cleaning.py  env_vars.py  flagging.py  limesurvey_etl.py  load_limesurvey.py  question_items.py
airflow/include/: cleaning.py  cleaning.yaml  config.py  extract.py  load.py  question_groups.sql  question_items.sql  subquestions.sql  utils.py
configs/: test.yaml
dags/: limesurvey_etl.py
data/: README.md
docs/: Makefile  conf.py  index.md  index.rst  installation.md  make.bat
docs/user-how-to/: creating-dags.md  etl-config-how-to.md
include/: config.py  config.yaml  extract.py  load.py  utils.py
include/configs/: diversity_dims_config.yaml  meta_data_config.yaml  questions_config.yaml  respondents_config.yaml
include/mappings/: Mapping_LS-QuestionTypesMajor.csv  mapping_LS-AnswerCodeToValue.csv  mapping_diversity_answers.csv  mapping_question_answers.csv  mapping_subquestions.csv
installation/: index.html
limesurvey_etl/: __main__.py  etl_pipeline.py  transformation_pipeline.py
references/: 00-setup-coolify-postgres.R  00-setup-limesurvey.R
search/: search_index.json
tests/: conftest.py
(+87 files in other folders)
